--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3163,6 +3163,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - ch.alias.tpradius
         - ch.alias.bodyslide
         - ch.alias.deadpool
         - ch.alias.jump0
@@ -6033,7 +6034,6 @@ groups:
     - deluxechat.utf
     - -essentials.ignore
     - herochat.admin.unignore
-    - -essentials.warps.lab
     - ch.alias.mortal
     - editablesign.edit
     - essentials.getpos
@@ -9782,7 +9782,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - flashbarryallen
+    - redranger
     options:
       name: xDcGamer
     worlds:
@@ -10962,7 +10962,7 @@ users:
       name: stock458
   713cae7a-ef6d-4a06-8922-4741459c12bc:
     group:
-    - bluelanternbarryallen
+    - infinitysilversurfer
     options:
       name: Zargon_King
     permissions:
@@ -11220,10 +11220,11 @@ users:
       name: Green__Dragon
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - blacklanternmartianmanhunter
+    - timewraith
     options:
       name: _Voiden_
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   89fa7bbd-c426-4e68-95e2-a8859363705b:
     group:
     - doctorstrange
@@ -11780,7 +11781,7 @@ users:
       name: dragonmonkey2006
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     group:
-    - silversurfer
+    - blueranger
     options:
       name: Leo4Real
       prefix: ''
@@ -12001,7 +12002,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - harleyquinn
+    - redlanternsupergirl
     options:
       name: SS_HarleyQuinn
       prefix: ''
@@ -12072,7 +12073,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackracerwilliewalker
+    - kidflashwallywest
     options:
       name: nevsfam
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
@@ -12088,7 +12089,7 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - blacklanternmartianmanhunter
+    - steel
     options:
       name: Natoryn
     permissions:
@@ -12153,7 +12154,7 @@ users:
     - superman
   e5ca5099-ecb7-47e0-be88-0cceb23aeb53:
     group:
-    - starlord
+    - deadpool
     options:
       name: Dr_Paleo
   e5ecb484-cbc2-46e4-a8b1-373abcb146a9:
@@ -13514,10 +13515,11 @@ users:
       name: elementia3773
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - mortal
+    - blackracerwilliewalker
     options:
       name: Eobard765Man
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   68b67a62-36e2-4e8e-b41d-ed8c15afdb3e:
     group:
     - antman
@@ -13808,7 +13810,7 @@ users:
       name: CookieMonsterr_
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group:
-    - inertiathaddeusthawneii
+    - mortal
     options:
       name: TracyMusic
   99a2ad6c-fd75-47a2-8912-c4dc24f4b830:
@@ -14068,7 +14070,7 @@ users:
       name: GalaxyGladiator
   6a355992-be49-422a-bb5c-52f9f6f7d8ca:
     group:
-    - silversurfer
+    - whitelanterntelosusr
     options:
       name: Homie10
     permissions: []
@@ -15197,7 +15199,7 @@ users:
       name: XxKipperxX
   07403436-1c7f-4e91-9dd4-58fbe8846992:
     group:
-    - goku
+    - genos
     options:
       name: MCBawler
   debef98b-23ba-461c-847e-968b83f7c891:
@@ -15206,6 +15208,7 @@ users:
     options:
       name: JackLauren1
     permissions:
+    - multiverse.access.underworld
     - -sank.sounds
   945d8c90-5d38-4ab8-9d99-784f0416a31d:
     group:
@@ -15575,7 +15578,7 @@ users:
       name: jeditony7
   d30e937c-c916-4d85-9bf1-03ae0a837f48:
     group:
-    - infinitysilversurfer
+    - savitar
     options:
       name: _AquaStorm_
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
@@ -15584,7 +15587,7 @@ users:
       name: Miner_Myles
   1721499c-d5ae-49ac-8883-8629efc44d85:
     group:
-    - silversurfer
+    - goku
     options:
       name: Asriel_Playz
   fad8db44-888f-44dd-8752-247eade09590:
@@ -15757,7 +15760,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - mrmxyzptlk
+    - onepunchman
     options:
       name: LordOfGallifrey
     permissions: []
@@ -15851,7 +15854,7 @@ users:
       name: NightWing4886
   a063a24d-e168-402c-9bab-c904eef3c996:
     group:
-    - antman
+    - beastboy
     options:
       name: Ginger_Guy_GameZ
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
@@ -16067,7 +16070,7 @@ users:
       name: NachoieTaco
   c4eb2357-84c3-416a-87c8-ea172cb73655:
     group:
-    - mortal
+    - acceleratedman
     options:
       name: TheCybe
   40b1b828-fe30-41a1-ac6a-08d45080fd7e:
@@ -16082,12 +16085,12 @@ users:
       name: manglestar
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group:
-    - darthvader
+    - blast
     options:
       name: 5up3rZ
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
     group:
-    - jinx
+    - supergirl
     options:
       name: Nyan_Kat_Girl
     permissions:
@@ -16098,12 +16101,39 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - magneto
+    - vision
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
     group:
-    - mortal
+    - deadpool
+    options:
+      name: Sam_Zylox
+  3e7fdabe-e399-436a-beaa-2c3733af7ae9:
+    group:
+    - doctorstrange
+    options:
+      name: AlexBayBlade
+  a6e8e361-cc6a-4dbd-bdbb-d063050b179c:
+    group:
+    - infinitysilversurfer
+    options:
+      name: TCArboCrafter
+  9218ca8c-9cd6-4cc9-a664-f96da1fe01cc:
+    group:
+    - flashjaygarrick
+    options:
+      name: HeroYoshime
+  84c1721d-0e47-4591-9198-794362c44ef9:
+    group:
+    - greenarrow
+    options:
+      name: Cmdr_Jalapeno
+  be65f5e9-7dde-478f-8445-d25a8b333797:
+    group:
+    - spiderman2099
+    options:
+      name: Dan_the_man9000
 worlds:
   checkers:
     inheritance:
