--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16085,7 +16085,7 @@ users:
       name: manglestar
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group:
-    - blast
+    - captainamericasteverogers
     options:
       name: 5up3rZ
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
