--- a/WorldGuard/worlds/underworld/regions.yml
+++ b/WorldGuard/worlds/underworld/regions.yml
@@ -40,6 +40,7 @@ regions:
         flags:
             other-explosion: deny
             blocked-cmds-group: NON_MEMBERS
+            invincible: allow
             build-group: MEMBERS
             interact: deny
             pistons: allow
@@ -52,6 +53,7 @@ regions:
                 /fly, /back, /tpo, /tpahere, /tpl, /tpyes, /warp, /tpall, /tps]
             block-break: deny
             interact-group: NON_MEMBERS
+            invincible-group: MEMBERS
             block-place-group: NON_MEMBERS
             tnt: deny
             block-break-group: NON_MEMBERS
