--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,20 +1,61 @@
 groups:
-  loki: 
-     inheritance: 
-     - commonherotraits 
-     options: 
-       prefix: '&6L&2o&8k&bi' 
-       suffix: '&b' 
-     worlds: 
-       survival: 
-         permissions: 
-         - ch.alias.mindcontrol 
-         - ch.alias.stopmindcontrol 
-         - essentials.tppos 
-         - ch.alias.disguise
-         - ch.alias.run0
-         - ch.alias.run1
-         - ch.alias.run2
+  loki:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6L&2o&8k&bi'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - libsdisguises.disguise
+        - libsdisguises.undisguise
+        - libsdisguises.disguise.bat.-setinvisible
+        - libsdisguises.disguise.blaze.-setinvisible
+        - libsdisguises.disguise.cave_spider.-setinvisible
+        - libsdisguises.disguise.chicken.-setinvisible
+        - libsdisguises.disguise.cow.-setinvisible
+        - libsdisguises.disguise.creeper.-setinvisible
+        - libsdisguises.disguise.donkey.-setinvisible
+        - libsdisguises.disguise.elder_guardian.-setinvisible
+        - libsdisguises.disguise.enderman.-setinvisible
+        - libsdisguises.disguise.endermite.-setinvisible
+        - libsdisguises.disguise.ghast.-setinvisible
+        - libsdisguises.disguise.giant.-setinvisible
+        - libsdisguises.disguise.guardian.-setinvisible
+        - libsdisguises.disguise.horse.-setinvisible
+        - libsdisguises.disguise.iron_golem.-setinvisible
+        - libsdisguises.disguise.magma_cube.-setinvisible
+        - libsdisguises.disguise.mule.-setinvisible
+        - libsdisguises.disguise.mushroom_cow.-setinvisible
+        - libsdisguises.disguise.ocelot.-setinvisible
+        - libsdisguises.disguise.pig.-setinvisible
+        - libsdisguises.disguise.pig_zombie.-setinvisible
+        - libsdisguises.disguise.player.-setinvisible
+        - libsdisguises.disguise.rabbit.-setinvisible
+        - libsdisguises.disguise.sheep.-setinvisible
+        - libsdisguises.disguise.silverfish.-setinvisible
+        - libsdisguises.disguise.skeleton.-setinvisible
+        - libsdisguises.disguise.skeleton_horse.-setinvisible
+        - libsdisguises.disguise.slime.-setinvisible
+        - libsdisguises.disguise.snowman.-setinvisible
+        - libsdisguises.disguise.spider.-setinvisible
+        - libsdisguises.disguise.squid.-setinvisible
+        - libsdisguises.disguise.undead_horse.-setinvisible
+        - libsdisguises.disguise.villager.-setinvisible
+        - libsdisguises.disguise.witch.-setinvisible
+        - libsdisguises.disguise.wither.-setinvisible
+        - libsdisguises.disguise.wither_skeleton.-setinvisible
+        - libsdisguises.disguise.wolf.-setinvisible
+        - libsdisguises.disguise.zombie.-setinvisible
+        - libsdisguises.disguise.zombie_villager.-setinvisible
+        - ch.alias.mindcontrol
+        - ch.alias.stopmindcontrol
+        - essentials.tppos
+        - ch.alias.disguise
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
   mephisto:
     inheritance:
     - commonherotraits
@@ -44,6 +85,10 @@ groups:
       suffix: '&c'
     inheritance:
     - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - powers.sonicscrewdriver
   redranger:
     inheritance:
     - commonherotraits
@@ -7068,6 +7113,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - powers.onepunch
         - ch.alias.onepunchman
         - ch.alias.dismountplayer
         - ch.alias.carryplayer
@@ -9771,6 +9817,11 @@ groups:
     worlds:
       survival:
         permissions: []
+  thedoctorfourth:
+    worlds:
+      survival:
+        permissions:
+        - powers.sonicscrewdriver
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -9798,7 +9849,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - redranger
+    - spidermanpeterparker
     options:
       name: xDcGamer
     worlds:
@@ -10978,7 +11029,7 @@ users:
       name: stock458
   713cae7a-ef6d-4a06-8922-4741459c12bc:
     group:
-    - infinitysilversurfer
+    - bluelanternbarryallen
     options:
       name: Zargon_King
     permissions:
@@ -12089,7 +12140,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - kidflashwallywest
+    - blackracerwilliewalker
     options:
       name: nevsfam
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
@@ -12105,10 +12156,11 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - steel
+    - blacklanternmartianmanhunter
     options:
       name: Natoryn
     permissions:
+    - multiverse.access.underworld
     - multiverse.access.hallofworlds
     worlds:
       garbageworld:
@@ -13404,7 +13456,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - flashbartallen
+    - bluelanternbarryallen
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13951,7 +14003,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - jackjoyce
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -15220,7 +15272,7 @@ users:
       name: MCBawler
   debef98b-23ba-461c-847e-968b83f7c891:
     group:
-    - blackracerwilliewalker
+    - mortal
     options:
       name: JackLauren1
     permissions:
@@ -15548,7 +15600,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - onepunchman
+    - blackflash
     options:
       name: BlueWolf4Life
     permissions: []
@@ -15594,7 +15646,7 @@ users:
       name: jeditony7
   d30e937c-c916-4d85-9bf1-03ae0a837f48:
     group:
-    - savitar
+    - mortal
     options:
       name: _AquaStorm_
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
@@ -15603,7 +15655,7 @@ users:
       name: Miner_Myles
   1721499c-d5ae-49ac-8883-8629efc44d85:
     group:
-    - goku
+    - superman
     options:
       name: Asriel_Playz
   fad8db44-888f-44dd-8752-247eade09590:
@@ -15776,7 +15828,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - onepunchman
+    - thefourthdoctor
     options:
       name: LordOfGallifrey
     permissions: []
@@ -15870,7 +15922,7 @@ users:
       name: NightWing4886
   a063a24d-e168-402c-9bab-c904eef3c996:
     group:
-    - beastboy
+    - deadpool
     options:
       name: Ginger_Guy_GameZ
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
@@ -16101,7 +16153,7 @@ users:
       name: manglestar
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group:
-    - captainamericasteverogers
+    - blackpanther
     options:
       name: 5up3rZ
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
@@ -16142,7 +16194,7 @@ users:
       name: HeroYoshime
   84c1721d-0e47-4591-9198-794362c44ef9:
     group:
-    - greenarrow
+    - dannyphantom
     options:
       name: Cmdr_Jalapeno
   be65f5e9-7dde-478f-8445-d25a8b333797:
