--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -7654,6 +7654,20 @@ groups:
         - ch.alias.haste7
         - ch.alias.haste8
         - ch.alias.haste9
+  redlanternbleez:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&4R&0e&4d L&ca&4nt&0e&4rn&c&8(&4B&8)'
+      suffix: '&c'
+    worlds:
+      survival:
+        permissions:
+        - weakto.kryptonite
+        - powers.wallrun
+        - -essentials.protect.damage.fall
+        - ch.alias.redlanternbleez
+        - essentials.fly  
   redrobin:
     inheritance:
     - commonherotraits
