--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,28 +3,16 @@ groups:
       inheritance:  
       - commonherotraits  
       options:  
-        prefix: '&l&2Abo&amin&8at&2ion'  
-        suffix: '&a'  
+        prefix: '&6Ab&eo&6min&ea&6tion'  
+        suffix: '&6'
       worlds:  
         survival:  
           permissions:  
           - ch.alias.carryplayer  
-          - ch.alias.dismountplayer    
-          - ch.alias.throwiron 
-          - ch.alias.run0 
-          - ch.alias.run1 
-          - ch.alias.run2
-          - ch.alias.run3
-          - ch.alias.run4
+          - ch.alias.dismountplayer
           - ch.alias.jump0
           - ch.alias.jump1
           - ch.alias.jump2
-          - ch.alias.jump3
-          - ch.alias.jump4
-          - ch.alias.jump5
-          - ch.alias.jump6
-          - ch.alias.jump7
-
   loki: 
      inheritance: 
      - commonherotraits 
