--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,18 @@
 groups:
+  abomination:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6Ab&eo&6min&ea&6tion'
+      suffix: '&6'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
   loki:
     inheritance:
     - commonherotraits
@@ -10564,7 +10578,7 @@ users:
     group:
     - thanos
     options:
-      name: VortexPrimeYT
+      name: VortexPrimes
   413735fc-bf1f-489d-b314-50cbbef18cf1:
     group:
     - darkseid
@@ -10783,7 +10797,7 @@ users:
       name: dAnIeLnS
   59c423bf-2a7e-4fe2-8ac2-7393de01d583:
     group:
-    - batman
+    - captaincold
     options:
       name: Boss90907
     permissions:
@@ -12849,7 +12863,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - whitecanary
+    - xtwothree
     options:
       name: _WonderBat_
     worlds:
@@ -14016,7 +14030,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - nightcrawler
+    - jackjoyce
     options:
       name: nightghost2
     permissions:
@@ -14043,7 +14057,7 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - martianmanhunter
+    - flashbarryallen
     options:
       name: birdie911
     permissions: []
@@ -15014,10 +15028,11 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - jessequick
+    - supergirl
     options:
       name: Peyton84206
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   176808de-428a-47f2-acb0-bd5ca1a1b6e0:
     group:
     - johncena
@@ -15080,7 +15095,7 @@ users:
       name: Khitzu
   286a6fb4-46f6-4d97-be53-eb89cc2ff65a:
     group:
-    - savitar
+    - martianmanhunter
     options:
       name: surferboy2004
     permissions: []
@@ -16042,7 +16057,7 @@ users:
       name: SepticPanda45
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - savitar
+    - mortal
     options:
       name: MrGold4
   65f708f6-deb9-4fd3-99f7-c235dd2ce33a:
@@ -16107,7 +16122,7 @@ users:
       name: IAmAGreatDueler
   3216a378-fb47-41c6-8bf3-e12bd3e68e19:
     group:
-    - mewtwo
+    - bluelanternbarryallen
     options:
       name: firegirl8
   362147cc-cedb-4c82-84cf-93b5bdb6ece7:
@@ -16171,9 +16186,11 @@ users:
     - superman
     options:
       name: 5up3rZ
+    permissions:
+    - multiverse.access.underworld
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
     group:
-    - supergirl
+    - jinx
     options:
       name: Nyan_Kat_Girl
     permissions:
@@ -16257,6 +16274,11 @@ users:
     - greengoblin
     options:
       name: Sykaos
+  cb234d7c-6ed5-4d5d-8f63-29e505cf5b5b:
+    group:
+    - superman
+    options:
+      name: xBrian1218
 worlds:
   checkers:
     inheritance:
