--- a/CommandHelper/prefs/persistence.ini
+++ b/CommandHelper/prefs/persistence.ini
@@ -2,4 +2,4 @@
 # The persistance network, see the wiki page at
 # http://wiki.sk89q.com/wiki/CommandHelper/Persistance_Network
 
-**=ser://persistance.ser
+**=yml:///home/minecraft/server/plugins/CommandHelper/storage.yml
