--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,8 +3,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&6Ab&eo&6min&ea&6tion'
-      suffix: '&6'
+      prefix: '&l&2Abo&amin&8at&2ion'
+      suffix: '&2'
     worlds:
       survival:
         permissions:
@@ -13,6 +13,10 @@ groups:
         - ch.alias.jump0
         - ch.alias.jump1
         - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.jump6
   loki:
     inheritance:
     - commonherotraits
@@ -9875,7 +9879,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - martianmanhunter
+    - thefourthdoctor
     options:
       name: xDcGamer
     worlds:
@@ -10541,7 +10545,7 @@ users:
     group:
     - whitelanternkylerayner
     options:
-      name: Kubilay_39
+      name: BookOfElements
   3f37bdf9-cd54-498a-96b9-16729ac541bc:
     group:
     - spiderwomangwenstacy
@@ -11314,7 +11318,7 @@ users:
       name: Green__Dragon
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - zoom
+    - blacklanternmartianmanhunter
     options:
       name: _Voiden_
     permissions:
@@ -12183,7 +12187,7 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - ghostriderjohnnyblaze
+    - bobafett
     options:
       name: Natoryn
     permissions:
@@ -12497,7 +12501,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - xtwothree
+    - mortal
     options:
       name: Camulll
     permissions:
@@ -12863,7 +12867,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - xtwothree
+    - mortal
     options:
       name: _WonderBat_
     worlds:
@@ -14030,7 +14034,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - jackjoyce
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -14047,7 +14051,7 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - cyborg
+    - vision
     options:
       name: TooFluffy
   05a43d17-2abf-46d0-a1dd-99527325eb00:
@@ -14057,7 +14061,7 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - flashbarryallen
+    - mew
     options:
       name: birdie911
     permissions: []
@@ -14114,7 +14118,7 @@ users:
     permissions: []
   29cd1cfe-bc4a-4c9c-af72-a5f984dffded:
     group:
-    - clayface
+    - apocalypse
     options:
       name: TheDiamonSKysYT
   412bfafd-7a98-4c90-ad33-c1ffe24b0b24:
@@ -14488,7 +14492,7 @@ users:
       name: The_Legend_Zz
   25096e3b-3798-41e6-b1a6-1f257ebe6471:
     group:
-    - ares
+    - superboykalel
     options:
       name: Darkkoward
   funcaptainrex:
@@ -14785,7 +14789,7 @@ users:
       name: NinjaPizza3
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group:
-    - shazam
+    - martianmanhunter
     options:
       name: BrainyRuler
     permissions: []
@@ -14851,7 +14855,7 @@ users:
       name: JigglyJoy
   972d3bcd-87bc-4e35-a334-ad792dc8e260:
     group:
-    - impulsebartallen
+    - percyjackson
     options:
       name: NINJA_SNIVY
   37865109-3065-4a6d-9549-0bef1ea65eea:
@@ -15028,7 +15032,7 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - supergirl
+    - missmartian
     options:
       name: Peyton84206
     permissions:
@@ -15095,7 +15099,7 @@ users:
       name: Khitzu
   286a6fb4-46f6-4d97-be53-eb89cc2ff65a:
     group:
-    - martianmanhunter
+    - savitar
     options:
       name: surferboy2004
     permissions: []
@@ -15821,7 +15825,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - flashwallywest
+    - blacklanterneobardthawne
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
@@ -15856,7 +15860,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - flashbarryallen
+    - onepunchman
     options:
       name: LordOfGallifrey
     permissions: []
@@ -16122,9 +16126,11 @@ users:
       name: IAmAGreatDueler
   3216a378-fb47-41c6-8bf3-e12bd3e68e19:
     group:
-    - bluelanternbarryallen
+    - mewtwo
     options:
       name: firegirl8
+    permissions:
+    - multiverse.access.underworld
   362147cc-cedb-4c82-84cf-93b5bdb6ece7:
     group:
     - mortal
@@ -16190,7 +16196,7 @@ users:
     - multiverse.access.underworld
   690cffaf-03a1-4e16-a7bc-832cb49b523a:
     group:
-    - jinx
+    - supergirl
     options:
       name: Nyan_Kat_Girl
     permissions:
@@ -16276,9 +16282,19 @@ users:
       name: Sykaos
   cb234d7c-6ed5-4d5d-8f63-29e505cf5b5b:
     group:
-    - superman
+    - darkseid
     options:
       name: xBrian1218
+  8ab9ffd0-1541-4556-a486-9a9beed1371a:
+    group:
+    - athena
+    options:
+      name: xDoge21Ninjax
+  2dac9ce7-63f8-40f4-b083-407faa20e1bd:
+    group:
+    - flashbarryallen
+    options:
+      name: DarkDestroyer99
 worlds:
   checkers:
     inheritance:
