--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  iceman: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&bIce&1man' 
+       suffix: '&b' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.run0
+         - ch.alias.run1
+         - ch.alias.run2
   abomination:
     inheritance:
     - commonherotraits
