--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6585,6 +6585,9 @@ groups:
         permissions:
         - essentials.interact
         - essentials.build.interact.*
+      parkourmedium:
+        permissions:
+        - essentials.build.interact.*
   commonherotraits:
     inheritance:
     - mortal
@@ -9885,7 +9888,8 @@ users:
     worlds:
       greenfield:
         permissions: []
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   0163b69a-4dc7-4caa-ad07-d6c14db6f37a:
     options:
       name: Plutogirl02
@@ -10558,7 +10562,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - mortal
+    - reverseflasheobardthawne
     options:
       name: adambash
     worlds:
@@ -11275,11 +11279,11 @@ users:
       prefix: ''
       suffix: ''
     permissions:
+    - -powers.pointandclicklightning
     - multiverse.access.underworld
     - escaperoom.bpass
     - -powers.wallrun
     - -powers.wallclimb
-    - -powers.pointandclicklightning
     - -chatcontrol.channel.*.bypass.world
     - -chatcontrol.channel.*.bypass.range
     - essentials.warps.alpha
@@ -11318,7 +11322,7 @@ users:
       name: Green__Dragon
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - blacklanternmartianmanhunter
+    - blackracerwilliewalker
     options:
       name: _Voiden_
     permissions:
@@ -12174,6 +12178,7 @@ users:
     - blackflash
     options:
       name: nevsfam
+    permissions: []
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
     group:
     - mortal
@@ -12187,7 +12192,7 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - bobafett
+    - blacklanternmartianmanhunter
     options:
       name: Natoryn
     permissions:
@@ -12468,7 +12473,9 @@ users:
       name: Its_Stimpy
   f9e418bf-9c4f-47af-a963-310bff20bc36:
     options:
-      name: SpyPlays_
+      name: SpyJay_YT
+    group:
+    - superman
   fa3dc116-3188-4c27-8a2a-236981c20c4b:
     options:
       name: KittyTiger06
@@ -14118,7 +14125,7 @@ users:
     permissions: []
   29cd1cfe-bc4a-4c9c-af72-a5f984dffded:
     group:
-    - apocalypse
+    - hephaestus
     options:
       name: TheDiamonSKysYT
   412bfafd-7a98-4c90-ad33-c1ffe24b0b24:
@@ -15406,7 +15413,8 @@ users:
     - raven
     options:
       name: iiStrengthz
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   2b41716d-85e2-4e96-a647-d0daa29ea315:
     group:
     - blackflash
@@ -16189,7 +16197,7 @@ users:
       name: manglestar
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group:
-    - superman
+    - pikachu
     options:
       name: 5up3rZ
     permissions:
@@ -16295,6 +16303,11 @@ users:
     - flashbarryallen
     options:
       name: DarkDestroyer99
+  b4129155-6f01-4394-9601-65855f47f54b:
+    group:
+    - flashbarryallen
+    options:
+      name: claiiire
 worlds:
   checkers:
     inheritance:
