--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,11 +1,12 @@
 storage: {claiiireisConfused: '"false"', SS_HarleyQuinnlastmessage: '1.491183028243E9',
   xDcGamerlastSonicScrewdriver: '1.491184761603E9', joshaftelspeedEffects: '"false"',
   NatorynspeedEffects: '"false"', xDcGamerspeedEffects: '"false"', _Vigilance_speedEffects: '"false"',
-  lasttransform: '1.491185236587E9', AlexDie10lastmessage: '1.491182975807E9', JackLauren1isConfused: '"false"',
-  joshaftelisConfused: '"false"', _Vigilance_isConfused: '"false"', 5up3rZspeedEffects: '"false"',
-  Leo4RealspeedEffects: '"false"', firegirl8lastmessage: '1.491183149709E9', ElmarTheElfspeedEffects: '"false"',
-  firegirl8speedEffects: '"false"', Leo4RealisConfused: '"false"', ElmarTheElfisConfused: '"false"',
-  xSp4rkzspeedEffects: '"false"', firegirl8isConfused: '"false"', JackLauren1speedEffects: '"false"',
-  xSp4rkzisConfused: '"false"', TooFluffylastmessage: '1.491183014943E9', xDcGamerisConfused: '"false"',
-  claiiirespeedEffects: '"false"', 5up3rZisConfused: '"false"', LordOfGallifreylastmessage: '1.49118300578E9',
-  NatorynisConfused: '"false"'}
+  lasttransform: '1.491186333897E9', AlexDie10lastmessage: '1.491182975807E9', JackLauren1isConfused: '"false"',
+  Nyan_Kat_GirlspeedEffects: '"false"', joshaftelisConfused: '"false"', _Vigilance_isConfused: '"false"',
+  5up3rZspeedEffects: '"false"', Leo4RealspeedEffects: '"false"', Nyan_Kat_GirlisConfused: '"false"',
+  firegirl8lastmessage: '1.491183149709E9', ElmarTheElfspeedEffects: '"false"', SpyJay_YTisConfused: '"false"',
+  SpyJay_YTspeedEffects: '"false"', firegirl8speedEffects: '"false"', Leo4RealisConfused: '"false"',
+  ElmarTheElfisConfused: '"false"', xSp4rkzspeedEffects: '"false"', firegirl8isConfused: '"false"',
+  JackLauren1speedEffects: '"false"', xSp4rkzisConfused: '"false"', TooFluffylastmessage: '1.491183014943E9',
+  xDcGamerisConfused: '"false"', claiiirespeedEffects: '"false"', 5up3rZisConfused: '"false"',
+  LordOfGallifreylastmessage: '1.49118300578E9', NatorynisConfused: '"false"'}
