--- a/WorldGuard/worlds/underworld/regions.yml
+++ b/WorldGuard/worlds/underworld/regions.yml
@@ -33,6 +33,15 @@ regions:
         owners: {}
         type: cuboid
         priority: 0
+    stairplates:
+        parent: public
+        min: {x: 18.0, y: 26.0, z: 18.0}
+        max: {x: 18.0, y: 27.0, z: 21.0}
+        members: {}
+        flags: {}
+        owners: {}
+        type: cuboid
+        priority: 0
     summoncancel:
         parent: public
         min: {x: -4.0, y: 13.0, z: 17.0}
