--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9882,7 +9882,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - thefourthdoctor
+    - mandrakk
     options:
       name: xDcGamer
     worlds:
@@ -15438,7 +15438,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mephisto
+    - loki
     options:
       name: mythguy1226
     permissions:
@@ -15868,7 +15868,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - onepunchman
+    - thefourthdoctor
     options:
       name: LordOfGallifrey
     permissions: []
@@ -16295,7 +16295,7 @@ users:
       name: xBrian1218
   8ab9ffd0-1541-4556-a486-9a9beed1371a:
     group:
-    - athena
+    - darthvader
     options:
       name: xDoge21Ninjax
   2dac9ce7-63f8-40f4-b083-407faa20e1bd:
@@ -16308,6 +16308,16 @@ users:
     - flashbarryallen
     options:
       name: claiiire
+  b80c78e8-38cc-4c80-bcf0-bdf02fa099d1:
+    group:
+    - wonderwoman
+    options:
+      name: Jackycon3ras
+  fe9d8527-2682-4084-95f6-5bf5e9268751:
+    group:
+    - wonderwoman
+    options:
+      name: MissSavage27
 worlds:
   checkers:
     inheritance:
