--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -98,15 +98,39 @@ groups:
         permissions:
         - ch.alias.stoptime
   thefourthdoctor:
-    options:
-      prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
-      suffix: '&c'
     inheritance:
     - commonherotraits
+    options:
+      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      suffix: '&1'
     worlds:
       survival:
         permissions:
-        - powers.sonicscrewdriver
+        - essentials.msg
+        - essentials.warps.*
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
+  thefirstdoctor:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      suffix: '&1'
+    worlds:
+      survival:
+        permissions:
+        - essentials.msg
+        - essentials.warps.*
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
   redranger:
     inheritance:
     - commonherotraits
