--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -101,7 +101,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      prefix: §6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)
       suffix: '&1'
     worlds:
       survival:
@@ -118,7 +118,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      prefix: §6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)
       suffix: '&1'
     worlds:
       survival:
@@ -12199,7 +12199,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackflash
+    - flashwallywest
     options:
       name: nevsfam
     permissions: []
