Fix the first Doctor's name (second file)

--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9844,7 +9844,12 @@ groups:
     worlds:
       survival:
         permissions: []
-  thedoctorfourth:
+  thefirstdoctor:
+    options:
+      prefix: '&7T&1h&7e &0Do&7ct&0or &8(&f1st&8)'
+      suffix: '&1'
+    inheritance:
+    - commonherotraits
     worlds:
       survival:
         permissions:
