--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11297,7 +11297,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - thefirstdoctor
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -12199,7 +12199,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - flashwallywest
+    - blackflash
     options:
       name: nevsfam
     permissions: []
