--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -115,22 +115,15 @@ groups:
         - ch.alias.unconfuse
         - ch.alias.mindcontrol
   thefirstdoctor:
+    options:
+      prefix: '&7T&1h&7e &0Do&7ct&0or &8(&f1st&8)'
+      suffix: '&1'
     inheritance:
     - commonherotraits
-    options:
-      prefix: §6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)
-      suffix: '&1'
     worlds:
       survival:
         permissions:
-        - essentials.msg
-        - essentials.warps.*
-        - ch.alias.mindlock
-        - ch.alias.stopmindcontrol
-        - ch.alias.speak
-        - ch.alias.confuse
-        - ch.alias.unconfuse
-        - ch.alias.mindcontrol
+        - powers.sonicscrewdriver
   redranger:
     inheritance:
     - commonherotraits
@@ -9868,16 +9861,6 @@ groups:
     worlds:
       survival:
         permissions: []
-  thefirstdoctor:
-    options:
-      prefix: '&7T&1h&7e &0Do&7ct&0or &8(&f1st&8)'
-      suffix: '&1'
-    inheritance:
-    - commonherotraits
-    worlds:
-      survival:
-        permissions:
-        - powers.sonicscrewdriver
   quarntine:
     worlds:
       waterprison:
@@ -11302,7 +11285,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - thefirstdoctor
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -12204,7 +12187,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackflash
+    - batman
     options:
       name: nevsfam
     permissions: []
@@ -15897,7 +15880,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - thefourthdoctor
+    - thefirstdoctor
     options:
       name: LordOfGallifrey
     permissions: []
