Allow the Doctor to use his powers

--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -107,6 +107,13 @@ groups:
       survival:
         permissions:
         - powers.sonicscrewdriver
+               - essentials.msg
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
   redranger:
     inheritance:
     - commonherotraits
@@ -295,7 +302,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&7C&6a&7ble'
+      prefix: '&7C&6a&7ble' z z 
       suffix: '&7'
     worlds:
       survival:
@@ -9854,6 +9861,13 @@ groups:
       survival:
         permissions:
         - powers.sonicscrewdriver
+        - essentials.msg
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
   quarntine:
     worlds:
       waterprison:
