--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -107,7 +107,8 @@ groups:
       survival:
         permissions:
         - powers.sonicscrewdriver
-               - essentials.msg
+        - essentials.msg
+        - essentials.warps.*
         - ch.alias.mindlock
         - ch.alias.stopmindcontrol
         - ch.alias.speak
