--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9863,6 +9863,7 @@ groups:
         permissions:
         - powers.sonicscrewdriver
         - essentials.msg
+        - essentials.warps.*
         - ch.alias.mindlock
         - ch.alias.stopmindcontrol
         - ch.alias.speak
