--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -303,7 +303,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&7C&6a&7ble' z z 
+      prefix: '&7C&6a&7ble'
       suffix: '&7'
     worlds:
       survival:
