--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12187,7 +12187,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - batman
+    - blackflash
     options:
       name: nevsfam
     permissions: []
@@ -15698,7 +15698,7 @@ users:
       name: jeditony7
   d30e937c-c916-4d85-9bf1-03ae0a837f48:
     group:
-    - mortal
+    - blackracerwilliewalker
     options:
       name: _AquaStorm_
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
@@ -15880,7 +15880,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - thefirstdoctor
+    - thefourthdoctor
     options:
       name: LordOfGallifrey
     permissions: []
