--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,7 +1,8 @@
 storage: {claiiireisConfused: '"false"', SS_HarleyQuinnlastmessage: '1.491183028243E9',
   xDcGamerlastSonicScrewdriver: '1.491184761603E9', joshaftelspeedEffects: '"false"',
   NatorynspeedEffects: '"false"', xDcGamerspeedEffects: '"false"', _Vigilance_speedEffects: '"false"',
-  lasttransform: '1.491186333897E9', AlexDie10lastmessage: '1.491182975807E9', JackLauren1isConfused: '"false"',
+  lasttransform: '1.491186333897E9', testID3: '{"num":{"num":{"num":{"num":{"num":0}}}}}',
+  testID1: '0', testID2: '0', AlexDie10lastmessage: '1.491182975807E9', JackLauren1isConfused: '"false"',
   Nyan_Kat_GirlspeedEffects: '"false"', joshaftelisConfused: '"false"', _Vigilance_isConfused: '"false"',
   5up3rZspeedEffects: '"false"', Leo4RealspeedEffects: '"false"', Nyan_Kat_GirlisConfused: '"false"',
   firegirl8lastmessage: '1.491183149709E9', ElmarTheElfspeedEffects: '"false"', SpyJay_YTisConfused: '"false"',
