--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,13 +1,4 @@
-storage: {claiiireisConfused: '"false"', SS_HarleyQuinnlastmessage: '1.491183028243E9',
-  xDcGamerlastSonicScrewdriver: '1.491184761603E9', joshaftelspeedEffects: '"false"',
-  NatorynspeedEffects: '"false"', xDcGamerspeedEffects: '"false"', _Vigilance_speedEffects: '"false"',
-  lasttransform: '1.491186333897E9', testID3: '{"num":{"num":{"num":{"num":{"num":0}}}}}',
-  testID1: '0', testID2: '0', AlexDie10lastmessage: '1.491182975807E9', JackLauren1isConfused: '"false"',
-  Nyan_Kat_GirlspeedEffects: '"false"', joshaftelisConfused: '"false"', _Vigilance_isConfused: '"false"',
-  5up3rZspeedEffects: '"false"', Leo4RealspeedEffects: '"false"', Nyan_Kat_GirlisConfused: '"false"',
-  firegirl8lastmessage: '1.491183149709E9', ElmarTheElfspeedEffects: '"false"', SpyJay_YTisConfused: '"false"',
-  SpyJay_YTspeedEffects: '"false"', firegirl8speedEffects: '"false"', Leo4RealisConfused: '"false"',
-  ElmarTheElfisConfused: '"false"', xSp4rkzspeedEffects: '"false"', firegirl8isConfused: '"false"',
-  JackLauren1speedEffects: '"false"', xSp4rkzisConfused: '"false"', TooFluffylastmessage: '1.491183014943E9',
-  xDcGamerisConfused: '"false"', claiiirespeedEffects: '"false"', 5up3rZisConfused: '"false"',
-  LordOfGallifreylastmessage: '1.49118300578E9', NatorynisConfused: '"false"'}
+storage: {southmachine1: '0', northmachine2: '1', northmachine3: '1', southmachine3: '1',
+  southmachine2: '1', testID3: '6', testID1: '2', eastmachine1: '0', testID2: '0',
+  northmachine1: '0', westmachine1: '1', eastmachine3: '0', eastmachine2: '0', westmachine3: '1',
+  westmachine2: '9'}
