--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -15715,7 +15715,7 @@ users:
       name: Miner_Myles
   1721499c-d5ae-49ac-8883-8629efc44d85:
     group:
-    - superman
+    - 3dmandelroygarrett
     options:
       name: Asriel_Playz
   fad8db44-888f-44dd-8752-247eade09590:
