--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9902,7 +9902,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - mandrakk
+    - spidermanpeterparker
     options:
       name: xDcGamer
     worlds:
@@ -10947,7 +10947,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - mortal
+    - batman
     options:
       name: EmmettGaming
     worlds:
@@ -12094,6 +12094,8 @@ users:
       newcity:
         permissions:
         - essentials.build.*
+    permissions:
+    - multiverse.access.underworld
   d7db5572-a51d-4e44-9538-b9d65f2f6016:
     group:
     - mortal
@@ -12195,7 +12197,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackflash
+    - flashwallywest
     options:
       name: nevsfam
     permissions: []
@@ -13514,7 +13516,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - bluelanternbarryallen
+    - blacklanterneobardthawne
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13755,7 +13757,7 @@ users:
       name: NubSlayer69
   7476fe7f-8ce5-4a05-8020-5fe67db20142:
     group:
-    - godfallsuperman
+    - spidermanpeterparker
     options:
       name: SpaceSmash
     permissions:
@@ -14953,7 +14955,7 @@ users:
       name: xC1ndy
   52042d75-faf5-43ef-980c-e28b650b5dfe:
     group:
-    - batman
+    - spidermanmilesmorales
     options:
       name: AlfieMc007
     permissions: []
@@ -15660,7 +15662,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - onepunchman
+    - blackracerwilliewalker
     options:
       name: BlueWolf4Life
     permissions: []
@@ -15686,7 +15688,7 @@ users:
       name: BenjaminM248
   47e65665-0737-47cd-bc90-cbbcf9758266:
     group:
-    - mortal
+    - onepunchman
     options:
       name: Trixio10
   2c2de5e0-bf4e-4def-a7bb-507648fb9d66:
@@ -15888,7 +15890,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - thefourthdoctor
+    - flashbarryallen
     options:
       name: LordOfGallifrey
     permissions: []
@@ -16207,7 +16209,7 @@ users:
       name: TheCybe
   40b1b828-fe30-41a1-ac6a-08d45080fd7e:
     group:
-    - spidermanmilesmorales
+    - bluelanternbarryallen
     options:
       name: ToxicNebula77
   5878f863-e08b-4130-b265-a790e34aa64c:
@@ -16310,12 +16312,12 @@ users:
       name: Sykaos
   cb234d7c-6ed5-4d5d-8f63-29e505cf5b5b:
     group:
-    - darkseid
+    - blacklanterneobardthawne
     options:
       name: xBrian1218
   8ab9ffd0-1541-4556-a486-9a9beed1371a:
     group:
-    - darthvader
+    - firestormraymondstein
     options:
       name: xDoge21Ninjax
   2dac9ce7-63f8-40f4-b083-407faa20e1bd:
@@ -16338,6 +16340,16 @@ users:
     - wonderwoman
     options:
       name: MissSavage27
+  8dd69666-5ea4-4c5c-9dce-e35faffc0933:
+    group:
+    - ironmanmkxliii
+    options:
+      name: KrazyKami
+  c3ac7794-2bdd-4f94-937d-fa311e0f5432:
+    group:
+    - ironmanmkxliii
+    options:
+      name: FrankiePlayzYT
 worlds:
   checkers:
     inheritance:
