--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,16 +1,16 @@
 groups:
-  iceman: 
-     inheritance: 
-     - commonherotraits 
-     options: 
-       prefix: '&bIce&1man' 
-       suffix: '&b' 
-     worlds: 
-       survival: 
-         permissions: 
-         - ch.alias.run0
-         - ch.alias.run1
-         - ch.alias.run2
+  iceman:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&bIce&1man'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
   abomination:
     inheritance:
     - commonherotraits
@@ -9914,7 +9914,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - spidermanpeterparker
+    - mortal
     options:
       name: xDcGamer
     worlds:
@@ -11305,7 +11305,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - iceman
     options:
       name: God_Doesnt_Exist
       prefix: ''
