--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10959,7 +10959,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - batman
+    - wondergirl
     options:
       name: EmmettGaming
     worlds:
@@ -15472,7 +15472,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - loki
+    - mephisto
     options:
       name: mythguy1226
     permissions:
