--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2137,6 +2137,15 @@ groups:
         - ch.alias.jump0
         - ch.alias.jump1
         - ch.alias.jump2
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.run7
+        - ch.alias.run8
   blacklightning:
     inheritance:
     - commonherotraits
